2014-06-12  Ivan Andrus  <darthandrus@gmail.com>

	* ffap.el (ffap-lax-url): New var (bug#17723).
	(ffap-url-at-point): Use it.
	(ffap-file-at-point): Avoid returning just "/".

2014-06-12  Matthias Meulien  <orontee@gmail.com>

	* progmodes/python.el (class skeleton): Don't erase last char of class
	name (bug#17683).

2014-06-12  Cameron Desautels  <camdez@gmail.com>  (tiny change)

	* help.el (where-is): Use `default' arg of completing-read (bug#17705).

2014-06-12  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* files.el (auto-mode-alist): Map .ad files to xdefaults-mode
	(bug#17745).

2014-06-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el: Use lexical-binding.
	(ucs-names): Simplify.

2014-05-18  Eric Hanchrow  <eric.hanchrow@gmail.com>

	* progmodes/python.el (run-python): Use read-shell-command.

2014-06-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* rect.el: Make it possible to move bounds past EOL or into TABs.
	(operate-on-rectangle): Use apply-on-rectangle.
	(rectangle--mark-crutches): New var.
	(rectangle--pos-cols, rectangle--col-pos, rectangle--point-col)
	(rectangle--crutches, rectangle--reset-crutches): New functions.
	(apply-on-rectangle): Obey crutches.  Avoid setq.
	Fix missing final iteration if end is at EOB&BOL.
	(rectangle-mark-mode-map): Add remap bindings for
	exchange-point-and-mark and char/line movements.
	(rectangle--*-char): New function.
	(rectangle-exchange-point-and-mark, rectangle-right-char)
	(rectangle-left-char, rectangle-forward-char)
	(rectangle-backward-char, rectangle-next-line)
	(rectangle-previous-line): New commands.
	(rectangle--place-cursor): New function.
	(rectangle--highlight-for-redisplay): Use it.  Use apply-on-rectangle.

2014-06-08  Glenn Morris  <rgm@gnu.org>

	* startup.el (initial-buffer-choice): Doc fix.
	Reset :version (adding an option does not merit a :version bump).

	* bookmark.el (bookmark-load):
	* uniquify.el (uniquify-buffer-name-style): Doc fixes.
